--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -1,11 +1,45 @@
 .mt {
-    &-50 {
-        margin-top: 50px;
-    }
-    &-10 {
-        margin-top: 10px;
-    }
-    &-20 {
-        margin-top: 20px;
-    }
+  &-50 {
+    margin-top: 50px;
+  }
+  &-10 {
+    margin-top: 10px;
+  }
+  &-20 {
+    margin-top: 20px;
+  }
+}
+
+.mb {
+  &-50 {
+    margin-bottom: 50px;
+  }
+  &-10 {
+    margin-bottom: 10px;
+  }
+  &-20 {
+    margin-bottom: 20px;
+  }
+}
+
+.row-centered-content {
+  justify-content: center;
+}
+
+.main-layout {
+  background-color: #fff;
+  margin: 30px 10px;
+  padding: 20px 10px;
+}
+
+body {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    308deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(252, 176, 69, 1) 100%
+  );
+  min-height: 100vh;
+  width: 100%;
+  height: 100%;
 }
